# AtlassianMCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
src/atlassian_mcp/: __init__.py  clients.py  docs.py  server_cli.py  settings.py
src/atlassian_mcp/servers/: __init__.py  bitbucket.py  confluence.py  jira.py  jsm.py
